--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@ for(let i=1;i<=100;i++){
   phaseX:Math.random()*Math.PI*2,
   phaseY:Math.random()*Math.PI*2,
   phaseZ:Math.random()*Math.PI*2,
-  speedX:Math.random()*0.0005+0.0002,
-  speedY:Math.random()*0.0005+0.0002,
-  speedZ:Math.random()*0.0003+0.0001,
+  // slightly faster speeds for smooth drifting
+  speedX:Math.random()*0.3+0.1,
+  speedY:Math.random()*0.3+0.1,
+  speedZ:Math.random()*0.2+0.05,
   msg:'',url:'',claimed:false,
   el:null
  });
@@ -126,7 +127,7 @@ function init(){
 
 /* ----- Animation ----- */
 function animate(){
- const t=performance.now()/2000;
+ const t=performance.now()/1000;
  // Gentle wind drift animation
  capsuleData.forEach(c=>{
   const x=c.baseX+Math.sin(t*c.speedX+c.phaseX)*c.ampX;
