Show placeholder image inside example capsule

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ for(let i=1;i<=100;i++){
   speedY:Math.random()*0.3+0.1,
   speedZ:Math.random()*0.2+0.05,
   msg:'',url:'',claimed:false,
-  img:i===1?'https://via.placeholder.com/80':'',
+  img:i===1?'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/x8AAwMBAKb0SXYAAAAASUVORK5CYII=':'',
   el:null
  });
 }
