--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 html,body{height:100%;font-family:'Montserrat',Arial,sans-serif;color:#fff;background:#000;overflow-x:hidden;}
 nav{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:rgba(0,0,0,0.6);backdrop-filter:blur(4px);z-index:1000;}
 nav h1{font-size:1.5rem;text-shadow:0 2px 4px rgba(0,0,0,0.6);}
+nav .nav-controls{display:flex;align-items:center;}
+#searchInput{padding:6px;border-radius:4px;border:1px solid #555;background:#222;color:#fff;width:80px;margin-right:10px;}
+#searchBtn{background:#e8a400;border:none;padding:6px 12px;border-radius:4px;color:#fff;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,0.4);transition:background 0.3s;margin-right:10px;}
+#searchBtn:hover{background:#cf9400;}
 button.buy{background:#1DE9B6;border:none;padding:10px 20px;font-weight:bold;border-radius:4px;color:#fff;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,0.4);transition:background 0.3s;}
 button.buy:hover{background:#19c9a4;}
 #scene{position:relative;height:100vh;width:100%;overflow:hidden;}
@@ -19,6 +23,8 @@ button.buy:hover{background:#19c9a4;}
 .capsule{overflow:hidden;}
 .capsule img{position:absolute;width:100%;height:100%;top:0;left:0;border-radius:50%;object-fit:cover;}
 .capsule span{position:relative;font-size:1.2rem;font-weight:bold;text-shadow:0 1px 3px rgba(0,0,0,0.7);pointer-events:none;z-index:1;}
+.highlight{animation:warmGlow 2s ease-in-out infinite;}
+@keyframes warmGlow{0%{box-shadow:0 0 5px 3px rgba(255,165,0,0.4);}50%{box-shadow:0 0 20px 10px rgba(255,165,0,0.8);}100%{box-shadow:0 0 5px 3px rgba(255,165,0,0.4);}}
 .tooltip{position:absolute;padding:8px 12px;background:rgba(0,0,0,0.8);border:1px solid #1DE9B6;border-radius:4px;font-size:0.9rem;pointer-events:none;white-space:pre-line;z-index:1001;}
 #popup{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);display:none;align-items:center;justify-content:center;z-index:1500;}
 #popup .popup-content{background:#111;padding:20px;border-radius:6px;color:#fff;text-align:center;max-width:400px;width:90%;box-shadow:0 0 10px rgba(0,0,0,0.5);}
@@ -36,8 +42,12 @@ button.buy:hover{background:#19c9a4;}
 </head>
 <body>
 <nav>
-<h1>La Cápsula</h1>
-<button class="buy">BUY A CAPSULE</button>
+ <h1>La Cápsula</h1>
+ <div class="nav-controls">
+  <input id="searchInput" type="number" min="1" max="100" placeholder="Buscar #">
+  <button id="searchBtn">Buscar</button>
+  <button class="buy">BUY A CAPSULE</button>
+ </div>
 </nav>
 <div id="scene">
 <div id="background"></div>
@@ -104,6 +114,8 @@ const counter=document.getElementById('counter');
 const modal=document.getElementById('modal');
 const form=document.getElementById('buyForm');
 const select=document.getElementById('capsuleSelect');
+const searchInput=document.getElementById('searchInput');
+const searchBtn=document.getElementById('searchBtn');
 const tooltip=document.createElement('div');
 tooltip.className='tooltip';
 scene.appendChild(tooltip);
@@ -113,6 +125,17 @@ const messageText=document.getElementById('messageText');
 const closePopup=document.getElementById('closePopup');
 closePopup.addEventListener('click',()=>popup.style.display='none');
 popup.addEventListener('click',e=>{if(e.target===popup)popup.style.display='none';});
+searchBtn.addEventListener('click',()=>highlightCapsule(parseInt(searchInput.value,10)));
+searchInput.addEventListener('keydown',e=>{if(e.key==='Enter'){e.preventDefault();searchBtn.click();}});
+
+function highlightCapsule(id){
+ if(!id||id<1||id>100)return;
+ const cap=capsuleData.find(c=>c.id===id);
+ if(cap){
+  cap.el.classList.add('highlight');
+  setTimeout(()=>cap.el.classList.remove('highlight'),3000);
+ }
+}
 
 /* ----- Initialize ----- */
 function init(){
