Refine highlight behavior and feedback

--- a/100k-field/index.html
+++ b/100k-field/index.html
@@ -12,6 +12,8 @@
     <input id="search" type="number" placeholder="Search ID" />
     <!-- Buy button -->
     <button id="buy">Buy Your Space</button>
+    <!-- Feedback text -->
+    <div id="feedback"></div>
     <!-- Tooltip -->
     <div id="tooltip" hidden></div>
     <script src="script.js"></script>
